# thermolib

./: .gitignore  CMakeLists.txt  README.md
include/: thermolib.h
sample/: CMakeLists.txt  data.c  sample.c  sample.h
src/: tables.c  thermolib.c
src/include/: tables.h  utils.h
src/tables/: k_type.c
tools/generate_tables/: generate.py  template.c
tools/generate_tables/tables/: ktype.txt
